--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <section class="section3">
         <h1>See how we <span style="color: #eea200">work</span></h1>
         <div class="contentS3">
-          <img src="img/Coming-soon.png" alt="Coming-soon" />
+          <img src="img/coming-soon.png" alt="Coming-soon" />
         </div>
       </section>
 
