--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       rel="stylesheet"
     />
     <link href="hamburgers/dist/hamburgers.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- logo -->
     <link rel="shortcut icon" href="img/analisis-de-mercado.png" />
     <!-- css -->
@@ -101,60 +100,26 @@
         <div class="contentS3">
           <img src="img/coming-soon.png" alt="Coming-soon" />
         </div>
-
-        <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1" >
-          <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalToggleLabel">Hello  🤩!</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                More information coming soon
-              </div>
-              <div class="modal-footer">
-                <button class="btn btn-warning" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Click Me Again</button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
-          <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalToggleLabel2">Thanks you for visit us page!</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                Come back soon 🥺!
-              </div>
-              <div class="modal-footer">
-                <button class="btn btn-warning" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Back to first</button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <a class="btn btn-warning" data-bs-toggle="modal" href="#exampleModalToggle" role="button" style="margin-top: 2rem;">Click Me!</a>
       </section>
 
       <section class="section4">
         <div class="contentBrands">
-          <div class="cardIndex">
+          <div class="card">
             <img src="./img/brands/apple.png" alt="apple" />
           </div>
-          <div class="cardIndex">
+          <div class="card">
             <img src="./img/brands/cocacola.png" alt="coca-cola" />
           </div>
-          <div class="cardIndex">
+          <div class="card">
             <img src="./img/brands/nike.png" alt="nike" />
           </div>
-          <div class="cardIndex">
+          <div class="card">
             <img src="./img/brands/walmart.png" alt="walmart" />
           </div>
-          <div class="cardIndex">
+          <div class="card">
             <img src="./img/brands/ferrari.png" alt="ferrari" />
           </div>
-          <div class="cardIndex">
+          <div class="card">
             <img src="./img/brands/logitech.png" alt="logitech" />
           </div>
         </div>
@@ -213,7 +178,5 @@
       </div>
     </footer>
     <script src="js/hamburger.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
   </body>
 </html>
