--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,500;0,700;0,800;0,900;1,300;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="hamburgers/dist/hamburgers.css" rel="stylesheet">
     <!-- logo -->
     <link rel="shortcut icon" href="img/analisis-de-mercado.png" />
@@ -72,7 +73,8 @@
               F.L.G Digital <span style="color: #eea200">Marketing</span
               ><br />Service
             </h2>
-            <a href="#2">See More</a>
+            <button type="button" class="btn btn-warning"><a href="#2">See More</a></button>
+            
           </div>
         </div>
       </section>
@@ -104,22 +106,22 @@
 
       <section class="section4">
         <div class="contentBrands">
-          <div class="card">
+          <div class="cardHome">
             <img src="./img/brands/apple.png" alt="apple" />
           </div>
-          <div class="card">
+          <div class="cardHome">
             <img src="./img/brands/cocacola.png" alt="coca-cola" />
           </div>
-          <div class="card">
+          <div class="cardHome">
             <img src="./img/brands/nike.png" alt="nike" />
           </div>
-          <div class="card">
+          <div class="cardHome">
             <img src="./img/brands/walmart.png" alt="walmart" />
           </div>
-          <div class="card">
+          <div class="cardHome">
             <img src="./img/brands/ferrari.png" alt="ferrari" />
           </div>
-          <div class="card">
+          <div class="cardHome">
             <img src="./img/brands/logitech.png" alt="logitech" />
           </div>
         </div>
@@ -178,5 +180,8 @@
       </div>
     </footer>
     <script src="js/hamburger.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
