--- a/pages/services.html
+++ b/pages/services.html
@@ -120,7 +120,7 @@
                 </button>
               </div>
               <div class="modal-body">
-                Go to 'Contact Page' and send you idea!
+                Go to 'Contact Page' and send your idea!
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
