--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <!-- logo -->
     <link rel="shortcut icon" href="img/analisis-de-mercado.png" />
     <!-- css -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="scss/style.css">
     <title>Home</title>
   </head>
   <body>
