--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,6 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,500;0,700;0,800;0,900;1,300;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
+      <!-- description -->
+      <meta
+      name="description"
+      content="conctac whit us for more information!"
+    />
+    <!-- keys -->
+    <meta name="keywords" content="contactfl, marketing contact"/>
     <!-- bootstrap -->
     <link
       rel="stylesheet"
@@ -30,7 +37,7 @@
         <img src="../img/icons/{.png" alt="" />
       </div>
       <div class="logo">
-        <a href="index.html"
+        <a href="../index.html"
           ><img src="../img/analisis-de-mercado.png" alt=""
         /></a>
       </div>
