--- a/pages/services.html
+++ b/pages/services.html
@@ -11,6 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,500;0,700;0,800;0,900;1,300;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
+    <!-- description -->
+    <meta
+    name="description"
+    content="we have the best benefits for you"
+   />
+    <!-- keys -->
+    <meta name="keywords" content="marketing services, services, benefits"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/analisis-de-mercado.png" />
     <link rel="stylesheet" href="../css/style.css" />
