--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,7 +27,9 @@
     />
     <!--  -->
     <link rel="shortcut icon" href="../img/analisis-de-mercado.png" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <!-- <link rel="stylesheet" href="../css/style.css" /> -->
+    <link rel="stylesheet" type="text/css" href="../scss/style.css" />
+
     <link href="../hamburgers/dist/hamburgers.css" rel="stylesheet" />
     <title>Contact</title>
   </head>
