--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- logo -->
     <link rel="shortcut icon" href="img/analisis-de-mercado.png" />
     <!-- css -->
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="css/style.css" /> -->
     <link rel="stylesheet" type="text/css" href="scss/style.css" />
     <title>Home</title>
   </head>
