--- a/pages/about.html
+++ b/pages/about.html
@@ -22,7 +22,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--  -->
     <link rel="shortcut icon" href="../img/analisis-de-mercado.png" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <!-- <link rel="stylesheet" href="../css/style.css" /> -->
+    <link rel="stylesheet" type="text/css" href="../scss/style.css" />
     <link href="../hamburgers/dist/hamburgers.css" rel="stylesheet">
     <title>About</title>
   </head>
